# ChangeLog for dev-java/glassfish-deployment-api
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/glassfish-deployment-api/ChangeLog,v 1.4 2010/10/14 20:25:40 ranger Exp $

  14 Oct 2010; Brent Baude <ranger@gentoo.org>
  glassfish-deployment-api-1.2.ebuild:
  Marking glassfish-deployment-api-1.2 ppc for bug 275672

  02 Aug 2009; Markus Meier <maekke@gentoo.org>
  glassfish-deployment-api-1.2.ebuild:
  amd64 stable, bug #275672

  30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  glassfish-deployment-api-1.2.ebuild:
  stable x86, bug 275672

*glassfish-deployment-api-1.2 (09 May 2009)

  09 May 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +glassfish-deployment-api-1.2.ebuild,
  +files/glassfish-deployment-api-1.2-build.xml.patch, +metadata.xml:
  Add J2EE deployment-api built from Glassfish sources.
