@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX glassfish-deployment-api-1.2-build.xml.patch 1166 RMD160 3cbfe9a411322a1cdded3070e8c81c8057941868 SHA1 91310b82ec83e6caa16373a2a96922819ad1fd18 SHA256 8d7419b794bd2b63b313e1dfd61b6fcc02c726529dfad19a385fb5453273d9e4
 DIST glassfish-v2ur2-b04-src.zip 39817113 RMD160 452a0ae36be311ca451d748389b34901172c20ab SHA1 7f5edcf01920d0df660bb64389feed6be69c92df SHA256 b554e618ed8edddd8f77de15a800b7d374edbfe1814196125c1e9ee7634ba388
-EBUILD glassfish-deployment-api-1.2.ebuild 1023 RMD160 f3054f796967972b2c12c8874cf737956d38173f SHA1 ac3b1a5da7e6cf2012bddcf1f0f6600df32dad33 SHA256 0502b9eb697f708d72926601518df35ddcbf3dad143f88a4392669e6c4fedcac
-MISC ChangeLog 885 RMD160 b6b9348af5ab5dcaf8f41dfb06f42680d21de0d8 SHA1 e6c16fd40c2d8d90c8781cee368ec8120a4c7338 SHA256 e85c9d6273987720374bf8f10811c0cedd9f5f8414604476fcc65cdedcdd0e75
+EBUILD glassfish-deployment-api-1.2.ebuild 1020 RMD160 859d443365905110eb89987324695a7915fce584 SHA1 2b55fad3bf103a102f487e7b308782c09d7f11c2 SHA256 b6a3e6ba4974d737c2e416ccee418e337bf9c93d4ea2d25a6d3d0e5d95b6a1af
+MISC ChangeLog 1021 RMD160 c55e9ba4e6876b2b279764ec5f14c9c79d19701f SHA1 23e83ae544e971424b489c16bb18ab730b78d59c SHA256 57c0e93ca0b05b3d8a0d594bab96503ddc3f7f21bd638bdd8e5eb9cbbc00cacc
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2KUiIACgkQcxLzpIGCsLQYeACglZqhBC6vFRh4Vac1IdcI/2JS
+NYsAoIjBsz+EqWlVMWw74xYZFuPr8cyW
+=4KUC
+-----END PGP SIGNATURE-----
