@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/glassfish-deployment-api/glassfish-deployment-api-1.2.ebuild,v 1.4 2010/10/14 20:25:40 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/glassfish-deployment-api/glassfish-deployment-api-1.2.ebuild,v 1.5 2011/03/23 20:04:02 betelgeuse Exp $
 
 EAPI="2"
 JAVA_PKG_IUSE="source"
@@ -11,7 +11,7 @@ MY_PV=${PV/./_}
 
 DESCRIPTION="J2EE Application Deployment Specification"
 HOMEPAGE="https://glassfish.dev.java.net/"
-LICENSE="sun-bcla-j2ee-deployment"
+LICENSE="|| ( CDDL GPL-2 )"
 SLOT="1.2"
 
 KEYWORDS="amd64 ppc x86"
